           of integrity checks had been removed from the code, which
           doubles the speed when transforming objects, but makes the
           function failing fast.

  Bugfixes and changes:

         • ‘analyse_IRSAR.RF()’

             • Add self call to the function, i.e. as input
               alternatively now a list of ‘RLum.Analysis’ objects can
               be provided for a higher efficiency.

         • ‘analyse_SAR.CWOSL()’

             • The function will not stop with an error if no 'OSL' or
               'IRSL' record is detected, but return ‘NULL’ and print a
               warning,

             • under really rare circumstances, many recycling points
               and recuperation points the function could crash
               (fixed).

             • Fixed a bug in the evaluation of the rejection criteria
               where the status of the palaedose error criterion was
               returned as 'OK' even though it was not (Thanks to
               Annette Kadereit) function could crash (fixed),

             • add support for testdose error as rejection criteria,

             • recuperation rate was not shown properely in the
               rejection criteria plot,

             • instead of showing failed, the polygon borders are now
               plotted in red in the rejection criteria plot,

             • if a list of RLum-objects was provided the rejection
               criteria could not be change any more fixed (thanks to
               Andrea Junge),

             • every rejection criterium now allows the input value
               ‘NA’, in this case values are calculated, but not
               considered as rejection criterium, i.e. the RC.Status
               will be always ‘'OK'’,

             • minor graphical adjustments.

         • ‘apply_CosmicRayRemoval()’

             • Argument ‘silent’ renamed to ‘verbose’,

             • new argument ‘method.Pych.threshold_factor’ added to