@@ -61,11 +61,11 @@
 </td>
 <td class=cellinside><br /> Function to analyse IRSAR RF measurements on K-feldspar samples, performed<br /> using the protocol according to Erfurt et al. (2003) and beyond.<br />
 </td>
-<td class=cellinside>0.6.2
+<td class=cellinside>0.6.3
 </td>
-<td class=cellinside>2016-04-18
+<td class=cellinside>2016-04-26
 </td>
-<td class=cellinside>12:33:54
+<td class=cellinside>18:30:30
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
@@ -344,11 +344,11 @@
 </td>
 <td class=cellinside><br /> This function runs the iterations that are needed to calculate the corrected<br /> age including the error for a given g-value according to Huntley & Lamothe<br /> (2001).<br />
 </td>
-<td class=cellinside>0.3.1
+<td class=cellinside>0.3.2
 </td>
-<td class=cellinside>2016-04-08
+<td class=cellinside>2016-04-26
 </td>
-<td class=cellinside>12:43:43
+<td class=cellinside>18:15:15
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
@@ -1361,9 +1361,9 @@
 </td>
 <td class=cellinside>0.3.6
 </td>
-<td class=cellinside>2016-04-20
+<td class=cellinside>2016-04-26
 </td>
-<td class=cellinside>18:37:31
+<td class=cellinside>18:19:02
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
